--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tom's Travel Pins
-logo: 
-description:
+logo: assets/tomstravelpins.png
+description: Testing out description. Added to left column?
 google_analytics:
 theme: jekyll-theme-minimal
