--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: assets/flornece-1.png
 description: Testing out description. Added to left column?
 google_analytics:
 theme: jekyll-theme-minimal
-site_favicon: favicon.ico
+site_favicon: assets/tomstravelpins.ico
