--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tom's Travel Pins
-logo: assets/flornece-1.png
+logo: assets/flornece-1.jpg
 description: Testing out description. Added to left column?
 google_analytics:
 theme: jekyll-theme-minimal
