--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Tom's Travel Pins
 logo: assets/flornece-1.jpg
-description: Testing out description. Added to left column?
+description: Places I pinned on Google Maps
 google_analytics:
 theme: jekyll-theme-minimal
 site_favicon: assets/tomstravelpins.ico
