--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tom's Travel Pins
-logo: assets/flornece-1.jpg
+logo: assets/florence-1.jpg
 description: Places I pinned on Google Maps
 google_analytics:
 theme: jekyll-theme-minimal
