Bunch of changes

--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: assets/florence-1.jpg
 # description: Places I pinned on Google Maps
 google_analytics:
 theme: jekyll-theme-minimal
-favicon: assets/tomstravelpins.ico
+favicon: assets/favicon-32x32.png
