--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ title: Tom's Travel Pins
 logo: assets/florence-1.jpg
 # description: Places I pinned on Google Maps
 google_analytics:
-theme: jekyll-theme-minimal
+remote_theme: tomwbond/minimal
+plugins:
+- jekyll-remote-theme
