Adding Istanbul part 2. Many small updates elsewhere

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Tom's Travel Pins
 logo: assets/florence-1.jpg
-# description: Places I pinned on Google Maps
+description: Places I Pinned on Google Maps
 google_analytics:
 remote_theme: tomwbond/minimal
 plugins:
