--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Tom's Travel Pins
 logo: assets/florence-1.jpg
-description: Places I Pinned on Google Maps
+description: This is a collection of the places that I've saved to Favourites on Google Maps
 google_analytics:
 remote_theme: tomwbond/minimal
 plugins:
